# azul-tiles-rs

./: .gitignore  Cargo.toml  best.json  move_select_nn.json
benches/: wall.rs
ppo_large/: checkpoint_0.mpk  checkpoint_1.mpk  checkpoint_10.mpk  checkpoint_11.mpk  checkpoint_12.mpk  checkpoint_13.mpk  checkpoint_14.mpk  checkpoint_15.mpk  checkpoint_16.mpk  checkpoint_17.mpk  checkpoint_18.mpk  checkpoint_2.mpk  checkpoint_3.mpk  checkpoint_4.mpk  checkpoint_5.mpk  checkpoint_6.mpk  checkpoint_7.mpk  checkpoint_8.mpk  checkpoint_9.mpk
src/: gamestate.rs  lib.rs  main.rs  player.rs  runner.rs  tiles.rs
src/playerboard/: mod.rs  wall.rs
src/players/: minimax.rs  mod.rs  nn.rs
src/players/nn/: mod.rs
src/players/ppo/: mod.rs  train.rs
