[package]
name = "azul-tiles-rs"
version = "0.1.0"
edition = "2021"
default-run = "azul-tiles-rs"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "wall"
harness = false


[dependencies]
strum = { version = "0.26.3", features = ["derive"] }
minimaxer = { git = "ssh://git@github.com/domw95/minimaxer-rs.git" }
dyn-clone = "1.0.18"
eframe = "0.31.0"
egui = "0.31.0"
fxhash = "0.2.1"
nalgebra = { version = "0.33.2", features = ["rand", "serde", "serde-serialize"] }
rand = { version = "0.8.0", features = ["small_rng"] }
rand_distr = "0.4.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
log = "0.4.27"
env_logger = "0.11.8"
burn = { version = "0.18.0", features = ["autodiff", "ndarray", "wgpu"] }
